# TestTask

./: .gitignore  CMakeLists.txt  README.md  run_all.sh
client/: CMakeLists.txt
client/src/: INetworkClient.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessageParser.cpp  MessageParser.h  TcpClient.cpp  TcpClient.h
server/: CMakeLists.txt
server/src/: ClientSession.cpp  ClientSession.h  IntQueue.cpp  IntQueue.h  ServerApp.cpp  ServerApp.h  Sorter.cpp  Sorter.h  TcpServer.cpp  TcpServer.h  main.cpp
server/tests/: CMakeLists.txt  test_queue.cpp  test_sorter.cpp
